Introduces Books API endpoint
Adds API endpoint for managing books, including listing, showing, creating, updating, and deleting books.

Implements authorization and policy scoping using Pundit.

Utilizes interactors for business logic and Blueprinter for response formatting.
