# swagger/v1/swagger.yaml
@@ -4,42 +4,6 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/v1/auth/login":
-    post:
-      summary: Login
-      tags:
-      - Auth
-      parameters: []
-      responses:
-        '200':
-          description: logged in
-        '401':
-          description: invalid credentials
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
-              required:
-              - email
-              - password
-  "/api/v1/auth/logout":
-    delete:
-      summary: Logout
-      tags:
-      - Auth
-      security:
-      - Bearer: []
-      responses:
-        '200':
-          description: logged out
-        '401':
-          description: missing token
   "/api/v1/books":
     get:
       summary: List books
@@ -47,6 +11,13 @@ paths:
       - Books
       security:
       - Bearer: []
+      parameters:
+      - name: query
+        in: query
+        required: false
+        description: Search by title/author/genre
+        schema:
+          type: string
       responses:
         '200':
           description: books found
@@ -87,55 +58,60 @@ paths:
                   - genre
                   - isbn
                   - total_copies
-  "/api/v1/borrowings":
+  "/api/v1/books/{id}":
+    parameters:
+    - name: id
+      in: path
+      required: true
+      schema:
+        type: integer
     get:
-      summary: List borrowings
+      summary: Show book
       tags:
-      - Borrowings
+      - Books
       security:
       - Bearer: []
       responses:
         '200':
-          description: borrowings list
-    post:
-      summary: Create borrowing
+          description: book found
+        '404':
+          description: book not found
+    patch:
+      summary: Update book
       tags:
-      - Borrowings
+      - Books
       security:
       - Bearer: []
       parameters: []
       responses:
-        '201':
-          description: borrowing created
+        '200':
+          description: book updated
       requestBody:
         content:
           application/json:
             schema:
               type: object
               properties:
-                borrowing:
+                book:
                   type: object
                   properties:
-                    book_id:
+                    title:
+                      type: string
+                    author:
+                      type: string
+                    genre:
+                      type: string
+                    total_copies:
                       type: integer
-                  required:
-                  - book_id
-  "/api/v1/borrowings/{id}/return_book":
-    patch:
-      summary: Return book
+    delete:
+      summary: Delete book
       tags:
-      - Borrowings
+      - Books
       security:
       - Bearer: []
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
       responses:
-        '200':
-          description: book returned
+        '204':
+          description: book deleted
 servers:
 - url: http://{defaultHost}
   variables:
